--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -1,6 +1,14 @@
 # Startup configuration
 after-login-command = []
-after-startup-command = []
+after-startup-command = [
+    'exec-and-forget sketchybar',
+    'exec-and-forget borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0'
+]
+
+exec-on-workspace-change = ['/bin/bash', '-c',
+    'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
+]
+
 start-at-login = true
 
 # Normalizations
@@ -26,8 +34,13 @@ inner.horizontal = 20
 inner.vertical =   20
 outer.left =       20
 outer.bottom =     20
-outer.top =        20
+outer.top =        50
 outer.right =      20
+
+[exec]
+inherit-env-vars = true
+[exec.env-vars]
+PATH = '/usr/local/bin/:${PATH}'
 
 # 'main' binding mode declaration
 [mode.main.binding]
@@ -75,7 +88,6 @@ alt-7 = 'workspace 7'
 alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
 
-# Move node to workspace
 alt-shift-1 = 'move-node-to-workspace 1'
 alt-shift-2 = 'move-node-to-workspace 2'
 alt-shift-3 = 'move-node-to-workspace 3'
@@ -86,9 +98,7 @@ alt-shift-7 = 'move-node-to-workspace 7'
 alt-shift-8 = 'move-node-to-workspace 8'
 alt-shift-9 = 'move-node-to-workspace 9'
 
-# Workspace back and forth
 alt-tab = 'workspace-back-and-forth'
-# Move workspace to monitor
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 # Service mode
