--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -2,7 +2,7 @@
 after-login-command = []
 after-startup-command = [
     'exec-and-forget sketchybar',
-    'exec-and-forget borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0'
+    'exec-and-forget borders'
 ]
 
 exec-on-workspace-change = ['/bin/bash', '-c',
@@ -30,12 +30,12 @@ preset = 'qwerty'
 
 # Gaps between windows
 [gaps]
-inner.horizontal = 20
-inner.vertical =   20
-outer.left =       20
-outer.bottom =     20
-outer.top =        50
-outer.right =      20
+inner.horizontal = 15
+inner.vertical =   15
+outer.left =       15
+outer.bottom =     15
+outer.top =        45
+outer.right =      15
 
 [exec]
 inherit-env-vars = true
