--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -78,25 +78,25 @@ alt-shift-minus = 'resize smart -50'
 alt-shift-equal = 'resize smart +50'
 
 # Workspaces
-alt-1 = 'workspace 1'
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-alt-8 = 'workspace 8'
-alt-9 = 'workspace 9'
+f1 = 'workspace 1'
+f2 = 'workspace 2'
+f3 = 'workspace 3'
+f4 = 'workspace 4'
+f5 = 'workspace 5'
+f6 = 'workspace 6'
+f7 = 'workspace 7'
+f8 = 'workspace 8'
+f9 = 'workspace 9'
 
-alt-shift-1 = 'move-node-to-workspace 1'
-alt-shift-2 = 'move-node-to-workspace 2'
-alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-5 = 'move-node-to-workspace 5'
-alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
-alt-shift-9 = 'move-node-to-workspace 9'
+alt-f1 = 'move-node-to-workspace 1'
+alt-f2 = 'move-node-to-workspace 2'
+alt-f3 = 'move-node-to-workspace 3'
+alt-f4 = 'move-node-to-workspace 4'
+alt-f5 = 'move-node-to-workspace 5'
+alt-f6 = 'move-node-to-workspace 6'
+alt-f7 = 'move-node-to-workspace 7'
+alt-f8 = 'move-node-to-workspace 8'
+alt-f9 = 'move-node-to-workspace 9'
 
 alt-tab = 'workspace-back-and-forth'
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
